<resources>
    <!--    Titles-->
    <string name="app_name">ULIM Timetable</string>
    <string name="faculty_activity_title">ULIM Faculties</string>
    <string name="chairs_activity_title">ULIM Chairs</string>
    <string name="groups_activity_title">ULIM Groups</string>
    <string name="users_activity_title">ULIM Users</string>
    <string name="account_activity_title">Account</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="register">Register</string>

    <!--    Menu items-->
    <string name="faculty_menu_item">Faculties</string>
    <string name="user_menu_item">Users</string>
    <string name="account_menu_item">Account</string>

    <!--    Edit texts-->
    <string name="login_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="chair_name">Chair name</string>
    <string name="faculty_name">Faculty name</string>
    <string name="faculty_description">Faculty description</string>
    <string name="user_first_name">First name</string>
    <string name="user_last_name">Last name</string>
    <string name="user_idnp">IDNP</string>
    <string name="timetable_name">Timetable name</string>
    <string name="group_name">Group name</string>
    <string name="group_symbol">Group symbol</string>
    <string name="role_spinner_title">Role</string>
    <string name="new_email">Enter a new email</string>
    <string name="new_password">Enter a new password</string>
    <string name="enter_your_idnp">Enter your idnp from passport</string>
    <string name="search">Search by name, email or passport</string>
    <string name="search_by_passport">Search by passport</string>

    <!--    Buttons-->
    <string name="login_button">LOGIN</string>
    <string name="view_button">VIEW</string>
    <string name="forgot_password_button">
        <u>FORGOT PASSWORD</u>
    </string>
    <string name="register_button"><u>REGISTER</u></string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="send_button">Send</string>
    <string name="logout_button">Logout</string>
    <string name="next_button">Next</string>
    <string name="registered_fragment_button">Registered</string>
    <string name="to_register_fragment_button">To Register</string>

    <!--    Dialogs-->
    <string name="add_faculty_dialog_title">Add Faculty</string>
    <string name="add_chair_dialog_title">Add Chair</string>
    <string name="add_group_dialog_title">Add Group</string>
    <string name="add_timetable_dialog_title">Add Timetable</string>
    <string name="add_user_dialog_title">Add User</string>
    <string name="edit_user_dialog_title">Edit User</string>
    <string name="edit_faculty_dialog_title">Edit Faculty</string>
    <string name="edit_chair_dialog_title">Edit Chair</string>
    <string name="edit_group_dialog_title">Edit Group</string>
    <string name="edit_timetable_dialog_title">Edit Timetable</string>
    <string name="add_passport_id">Add passport id for future students</string>

    <!--    Snack bar-->
    <string name="email_sent_to">Email sent to</string>
    <string name="please_verify_inbox">Please verify your email inbox.</string>

<!--    Email messages-->
    <string name="reset_password_email_title">Reset password</string>
    <string name="email_addressing">Hello dear user,\n\n</string>
    <string name="somebody_request_password">
        Somebody requested password for the app ULIM Timetable account associated with
    </string>
    <string name="you_can_reset_password">No changes have been made to your account yet.

        You can reset your password in account settings from app.\n
    </string>
    <string name="current_password">Current password is:</string>
    <string name="false_request_password">
        If you did not request password, please let us know immediately by replying to this email.\n\n
    </string>
    <string name="email_termination">Yours,\nThe ULIM Timetable team</string>

    <!--    Messages-->
    <string name="password_length_error">Password must be least 7 characters</string>
    <string name="empty_email_error">Please input your email</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="authentication_error">Authentication failed. Please verify input data.</string>
    <string name="forgot_password_message">Please contact your sys admin to recover password!</string>
    <string name="logout_message">Account logged out</string>
    <string name="add_user_successful_message">Successful added user</string>
    <string name="add_user_failure_message">Failure to add user</string>
    <string name="no_match_password_message">Password not match</string>
    <string name="password_is_empty">Please input password</string>
    <string name="first_name_is_empty">Please input first name</string>
    <string name="last_name_is_empty">Please input last name</string>
    <string name="idnp_length_error">Please input your 13 digits from ID card or passport</string>
    <string name="add_faculty_failure_message">Failure to add faculty</string>
    <string name="add_faculty_successful_message">Successful added faculty</string>
    <string name="empty_faculty_name_error">Please input the faculty name</string>
    <string name="empty_faculty_description_error">Please input the faculty description</string>
    <string name="add_chair_successful_message">Successful added chair to faculty</string>
    <string name="failure_add_chair_error">Failure to add chair for faculty</string>
    <string name="empty_chair_name_error">Please input a chair name</string>
    <string name="add_group_successful_message">Successful added group to chair</string>
    <string name="failure_add_group_error">Failed add group for chair</string>
    <string name="empty_group_name_error">Please input a group name</string>
    <string name="empty_group_symbol_error">Please input a group symbol</string>
    <string name="add_timetable_successful_message">Successful added timetable</string>
    <string name="failure_add_timetable_error">Failed to add timetable</string>
    <string name="empty_timetable_name_error">Please input a timetable name</string>
    <string name="image_uploaded_successful_message">Image uploaded successfully</string>
    <string name="failure_image_upload">Failed to upload image</string>
    <string name="update_user_success_message">Successful updated user</string>
    <string name="update_user_failure">Failure to update user</string>
    <string name="user">User</string>
    <string name="delete_user_success">has been successfully deleted</string>
    <string name="delete_user_from_db_fail">Error deleting user from database</string>
    <string name="delete_current_user_error">Cannot delete current user</string>
    <string name="database_query_error">Database query error</string>
    <string name="delete_faculty_success">Faculty is successful deleted</string>
    <string name="delete_faculty_failure">Failed to delete faculty</string>
    <string name="update_faculty_success">Successful edited user</string>
    <string name="update_faculty_failure">Failure to edit user</string>
    <string name="last_update">Last update:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_want_delete">Are you sure you want to delete this?</string>
    <string name="delete_chair_success">Chair successful deleted</string>
    <string name="delete_chair_failure">Cannot delete the chair</string>
    <string name="update_chair_success">Successful updated chair</string>
    <string name="update_chair_failure">Failure to update chair</string>
    <string name="update_group_success">Successful updated group</string>
    <string name="update_group_failure">Failure to update group</string>
    <string name="delete_group_success">Group successful deleted</string>
    <string name="delete_group_failure">Failure to delete group</string>
    <string name="group_symbol_max_length">Max length 3 symbols</string>
    <string name="delete_timetable_success">Timetable successful deleted</string>
    <string name="delete_timetable_failure">Failure to delete timetable</string>
    <string name="update_timetable_success">Successful updated timetable</string>
    <string name="update_timetable_failure">Failure to delete timetable</string>
    <string name="email_signin_failed">Email link sign-in failed or expired link</string>
    <string name="invalid_email_link">Invalid email link!</string>
    <string name="error_to_send_link">Error to send link to email. Please try later.</string>
    <string name="error_signin_with_new_credentials">Error sign in with new credentials</string>
    <string name="error_create_user_in_auth">Error create user in authentication</string>
    <string name="user_data_changed">You change a user data. Please login with new credentials!</string>
    <string name="this_is_your_current_email">This is your current email</string>
    <string name="this_is_your_old_password">This is your old password</string>
    <string name="passport_id_is_not_supported">Passport id is not valid for our system</string>
    <string name="successful_registration">You are successful registered in app</string>
    <string name="registration_failure">Fail to register</string>
    <string name="passport_is_added">Passport added successful</string>
    <string name="add_passport_fail">Add passport failed</string>
    <string name="passport_is_removed">Passport is removed successful</string>
    <string name="passport_remove_fail">Failure to remove passport</string>
    <string name="passport_already_exists">Passport already exists</string>
    <string name="passport_not_exists">Passport id not exists</string>
    <string name="email_already_registered">Email is already registered</string>
    <string name="email_not_registered">Email not registered in app</string>
    <string name="error_send_email">Error to send email. Please contact support!</string>
</resources>