<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ForgotPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailForgotTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_label"
            app:hintTextColor="@color/stroke_color"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/stroke_color" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailForgotEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/emailForgotTextField"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp">

        <Button
                android:id="@+id/cancelButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:strokeColor="@color/stroke_color"
                app:cornerRadius="16dp"
                android:text="@string/cancel_button"
                android:layout_marginTop="16dp"/>
        <Button
                android:id="@+id/sendButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:strokeColor="@color/stroke_color"
                app:cornerRadius="16dp"
                android:text="@string/send_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>