<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/dialog_bg"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/dialogTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/chairNameTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chair_name"
                app:hintTextColor="@color/stroke_color"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chairNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/cancelButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:strokeColor="@color/stroke_color"
                    app:cornerRadius="16dp"
                    android:text="@string/cancel_button"
                    android:layout_marginTop="16dp"/>
            <Button
                    android:id="@+id/saveButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:strokeColor="@color/stroke_color"
                    app:cornerRadius="16dp"
                    android:text="@string/save_button"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>