<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/dialog_bg"
                    android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTextField"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        app:passwordToggleEnabled="true"
                        app:hintTextColor="@color/stroke_color"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/stroke_color">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@null"
                            android:inputType="textPassword"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmPasswordTextField"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        app:passwordToggleEnabled="true"
                        app:hintTextColor="@color/stroke_color"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/stroke_color">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPasswordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@null"
                            android:inputType="textPassword"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                                android:id="@+id/editButton"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                app:strokeColor="@color/stroke_color"
                                app:cornerRadius="16dp"
                                android:text="@string/cancel_button"
                                android:layout_marginTop="16dp"/>
                        <Button
                                android:id="@+id/saveButton"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                app:strokeColor="@color/stroke_color"
                                app:cornerRadius="16dp"
                                android:text="@string/save_button"
                                android:layout_marginTop="16dp"/>
                    </LinearLayout>

            </LinearLayout>
        </ScrollView>
</RelativeLayout>